--- a/project/index.html
+++ b/project/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,700;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,400;1,200;1,400&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0cba82bad3.js"></script>
     <link rel="stylesheet" href="styles/style.css">
@@ -33,27 +35,63 @@
 
 <div class="wrapper">
     <section class="slider">
-        <div class="img"></div>
-        <div class="text">
-            <div class="title">Albert <span>Walkers</span></div>
-            <div class="description">I'm a web development</div>
-        </div>
-    </section>
-    <section class="about"> about
-        <div class="title">
-            Biography
-            <span>About Me</span> 
-        </div>
-        <div class="about_left">
-            <div class="image">
-                <img src="./images/2.jpg">
+        <div class="items">
+            <div class="img"></div>
+            <div class="text">
+                <div class="title">Albert <span>Walkers</span></div>
+                <div class="description">I'm a web development</div>
             </div>
         </div>
-        <div class="about_right">
-            <div class=""></div>
-            <div class=""></div>
-            <div class=""></div>
-            <div class=""></div>
+    </section>
+    <section class="about">
+        <div class="container">
+            <div class="title">
+                Biography
+                <span>About Me</span> 
+            </div>
+            <div class="items">
+                <div class="about_left">
+                    <div class="item">
+                        <div class="image">
+                            <img src="./images/2.jpg">
+                        </div>
+                    </div>
+                </div>
+                <div class="about_right">
+                    <div class="right_title">I'm Albert Walkers and <span>developmen</span></div>
+                    <div class="text">
+                        Hi! My name is <span>Albert Walkers.</span> I am a Web Developer, and I'm very passionate and dedicated to my work. With 20 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success.
+                    </div>
+                    <div class="about_info">
+                        <div class="information_list">
+                            <div class="main_about">
+                                <i class="fas fa-gift"></i>
+                                <h5>Birthday:</h5>
+                                <span class="date">02.10.1995</span>
+                            </div>
+                            <div class="main_about">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <span>
+                                <h5>Location:</h5> 
+                                <br>
+                                <a href="" class="date"> 544 Place, Plano, USA</a> 
+                                </span>
+                            </div>
+                            <div class="main_about">
+                                <i class="fas fa-user-graduate"></i>
+                                <h5>Study:</h5>
+                                <span class="date">Univercity of Chicago</span>
+                            </div>
+                            <div class="main_about">
+                                <i class="fas fa-envelope"></i>
+                                <h5>Mail:</h5>
+                                <span class="date">tamuna.tcharkhalashvili@gmail.com</span>
+                            </div>
+                        </div>
+                        <div class="information_list"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     
