--- a/project/index.html
+++ b/project/index.html
@@ -71,30 +71,310 @@
                             </div>
                             <div class="main_about">
                                 <i class="fas fa-map-marker-alt"></i>
-                                <span>
-                                <h5>Location:</h5> 
-                                <br>
-                                <a href="" class="date"> 544 Place, Plano, USA</a> 
-                                </span>
+                                <h5>Location:</h5>
+                                <span class="date"> 544 Place, Plano, USA</span> 
                             </div>
                             <div class="main_about">
                                 <i class="fas fa-user-graduate"></i>
                                 <h5>Study:</h5>
-                                <span class="date">Univercity of Chicago</span>
+                                <span class="date">Univercity of <br> Chicago</span>
                             </div>
                             <div class="main_about">
                                 <i class="fas fa-envelope"></i>
                                 <h5>Mail:</h5>
-                                <span class="date">tamuna.tcharkhalashvili@gmail.com</span>
+                                <span class="date"> mymail@gmail.com</span>
                             </div>
                         </div>
-                        <div class="information_list"></div>
+                        <div class="information_list">
+                            <div class="main_about">
+                                <i class="fas fa-calendar-alt"></i>
+                                <h5>Age:</h5>
+                                <span class="date">25</span>
+                            </div>
+                            <div class="main_about">
+                                <i class="fas fa-gamepad"></i>
+                                <h5>Interests:</h5>
+                                <span class="date"> Playstation, Reading</span>
+                            </div>
+                            <div class="main_about">
+                                <i class="fas fa-graduation-cap"></i>
+                                <h5>Degree:</h5>
+                                <span class="date"> Master</span>
+                            </div>
+                            <div class="main_about">
+                                <i class="fas fa-phone"></i>
+                                <h5>Phone:</h5>
+                                <span class="date"> 0322 177 05 05</span>
+                            </div> 
+                        </div>
+                    </div>
+
+                    <div class="button">
+                        <a href="">Download CV</a>
+                        <a href="">Send Message</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="card_section">
+        <div class="container">
+            <div class="card_title">
+                SERVICES
+                <span>WHAT I DO</span>
+            </div>
+            <div class="items">
+                <div class="item">
+                    <div class="icon"><i class="far fa-lightbulb"></i></div>
+                    <div class="title">Creative Design</div>
+                    <div class="description">Web design is a similar process of creation, with the intention of presenting...</div>
+                </div>
+                <div class="item">
+                    <div class="icon"><i class="fas fa-laptop-code"></i></div>
+                    <div class="title">Creative Design</div>
+                    <div class="description">Web design is a similar process of creation, with the intention of presenting...</div>
+                </div>
+                <div class="item">
+                    <div class="icon"><i class="far fa-paper-plane"></i></div>
+                    <div class="title">Creative Design</div>
+                    <div class="description">Web design is a similar process of creation, with the intention of presenting...</div>
+                </div>
+                <div class="item">
+                    <div class="icon"><i class="fas fa-camera-retro"></i></div>
+                    <div class="title">Creative Design</div>
+                    <div class="description">Web design is a similar process of creation, with the intention of presenting...</div>
+                </div>
+                <div class="item">
+                    <div class="icon"><i class="fas fa-box-open"></i></div>
+                    <div class="title">Creative Design</div>
+                    <div class="description">Web design is a similar process of creation, with the intention of presenting...</div>
+                </div>
+                <div class="item">
+                    <div class="icon"><i class="fas fa-share-alt"></i></div>
+                    <div class="title">Creative Design</div>
+                    <div class="description">Web design is a similar process of creation, with the intention of presenting...</div>
+                </div>
+            </div>
+        </div>
+        <section class="development">
+            <div class="container">
+                <div class="items">
+                    <div class="left">
+                        <div class="text">
+                            In a <span>short time,</span> I have been able to achieve excellence in all areas of app and web development.
+                        </div>
+                        <div class="description">
+                            I provide cost-effective and high quality products to meet our Clients’ needs of timely delivery World Wide. I want to be local in a global world to be where our Customers need our services customers need our services
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="chart">
+                            <span class="label">Web Development</span>
+                            <span class="number">95%</span>
+                        </div>
+                        <div class="line">
+                            <div class="percent_line"style="width: 95%;"></div>
+                        </div>
+                        <div class="chart">
+                            <span class="label">Brand Identity</span>
+                            <span class="number">80%</span>
+                        </div>
+                        <div class="line">
+                            <div class="percent_line"style="width: 80%;"></div>
+                        </div>
+                        <div class="chart">
+                            <span class="label">Javascript</span>
+                            <span class="number">90%</span>
+                        </div>
+                        <div class="line">
+                            <div class="percent_line"style="width: 90%;"></div>
+                        </div>
+                        <div class="chart">
+                            <span class="label">WordPress</span>
+                            <span class="number">85%</span>
+                        </div>
+                        <div class="line">
+                            <div class="percent_line" style="width: 85%;"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section> 
+    </section>
+    <section class="featured">
+        <div class="container">
+            <div class="title">
+                Portfolio
+                <span>Featured Works</span> 
+            </div>
+            <div class="links">
+                <a href="" class="active">All</a>
+                <a href="">Vimeo Video</a>
+                <a href="">YouTube Video</a>
+                <a href="">Popup Image</a>
+            </div>
+            <div class="items">
+                <div class="item">
+                    <img src="./images/11.jpg">
+                </div>
+                <div class="item">
+                    <img src="./images/8.jpg">
+                </div>
+                <div class="item">
+                    <img src="./images/2.jpg">
+                </div>
+                <div class="item">
+                    <img src="./images/10.jpg">
+                </div>
+                <div class="item">
+                    <img src="./images/7.jpg">
+                </div>
+                <div class="item">
+                    <img src="./images/9.jpg">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="modernist">
+            <div class="items">
+                <div class="description">
+                    <div class="icon">
+                        <i class="fas fa-quote-right"></i>
+                    </div>
+                    <div class="item">
+                        <div class="text">We were looking for a logo with a touch of modernism. Arlo grasped our needs and produced a stunning design. Awesome to work with Arlo. Incredibly organized, easy to communicate with, responsive with next iterations.</div>
+                        <div class="img">
+                            <img src="./images/3.jpg">
+                            <div class="name">
+                                <div class="autor">Mark Kennedy</div>
+                                <span>Web Developer</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <section class="working">
+        <div class="container">
+            <div class="title">
+                TIMELINE
+                <span>WORKING PERIOD</span> 
+            </div>
+            <div class="items">
+                <div class="item">
+                    <div class="period">2020 - 2021</div>
+                    <div class="item_logo">
+                        <img src="./images/envato.png" alt="">
+                    </div>
+                    <div class="title">Full Stack Developer</div>
+                    <div class="description">With 20 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success.</div>
+                </div>
+                <div class="item">
+                    <div class="period">2017 - 2018</div>
+                    <div class="item_logo">
+                        <img src="./images/envato.png" alt="">
+                    </div>
+                    <div class="title">Full Stack Developer</div>
+                    <div class="description">With 20 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success.</div>
+                </div>
+                <div class="item">
+                    <div class="period">2010 - 2012</div>
+                    <div class="item_logo">
+                        <img src="./images/envato.png" alt="">
+                    </div>
+                    <div class="title">Full Stack Developer</div>
+                    <div class="description">With 20 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success.</div>
+                </div>
+                <div class="item">
+                    <div class="period">2020 - 2021</div>
+                    <div class="item_logo">
+                        <img src="./images/envato.png" alt="">
+                    </div>
+                    <div class="title">Full Stack Developer</div>
+                    <div class="description">With 20 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success.</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="latest_section">
+        <div class="container">
+            <div class="title">
+                NEWS
+                <span>LATEST NEWS</span> 
+            </div>
+            <div class="cards">
+                <div class="card">
+                    <div class="card_img">
+                        <img src="./images/14.jpg">
+                    </div>
+                    <div class="card_body">
+                        <div class="info">
+                            <span>By <a href="">Alan Walker</a></span>
+                            <span class="date">03 July 2020</span>
+                        </div>
+                        <div class="description"><a href="">The Role of Design in Development</a></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card_img">
+                        <img src="./images/16.jpg">
+                    </div>
+                    <div class="card_body">
+                        <div class="info">
+                            <span>By <a href="">Alan Walker</a></span>
+                            <span class="date">03 July 2020</span>
+                        </div>
+                        <div class="description"><a href="">The Role of Design in Development</a></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card_img">
+                        <img src="./images/17.jpg">
+                    </div>
+                    <div class="card_body">
+                        <div class="info">
+                            <span>By <a href="">Alan Walker</a></span>
+                            <span class="date">03 July 2020</span>
+                        </div>
+                        <div class="description"><a href="">The Role of Design in Development</a></div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    
+    <section class="contact">
+        <div class="container">
+            <div class="title">
+                CONTACT
+                <span>GET IN TOUCH</span> 
+            </div>
+            <div class="text">Please fill out the form on this section to contact with me. Or call between 9:00 a.m. and 8:00 p.m. ET, Monday through Friday</div>
+            <div class="items">
+                <div class="item">
+                    <form action="">
+                        <input type="text" placeholder="Name">
+                        <input type="text" placeholder="Email">
+                        <textarea name="" placeholder="Message"></textarea>
+                        <button class="btn">Send Message</button>
+                    </form>
+                </div>
+                <div class="item_map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d78254.29930151883!2d0.04994716539859346!3d52.19892658578258!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d85d89f32a012d%3A0x63a320e1a35e3d21!2sCambridge%2C%20UK!5e0!3m2!1sen!2sge!4v1608918274412!5m2!1sen!2sge" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="footer">
+        <div class="container">
+            <div class="copyright">
+                <div class="copy">
+                    <a href="">Copyright © 2019 - 2020. Template has been designed by </a>
+                </div>
+                <div class="scroll"><i class="fas fa-caret-up"></i></div>
+            </div>
+        </div>
+    </section>    
 </div>
 </body>
 </html>
